--- a/views/landing.html
+++ b/views/landing.html
@@ -359,7 +359,7 @@
         </div>
 
         <div class="image-container">
-          <img src="final-cons.jpg" alt="AI Video Consultation">
+          <img src="/final-cons.jpg" alt="AI Video Consultation">
           <div class="pulse-border"></div>
         </div>
       </div>
