--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -10,10 +10,16 @@
       rel="stylesheet"
     />
     <!-- Font Awesome -->
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/c26cd2166c.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- Particles.js Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <!-- AOS Animation Library -->
